Fixed word wrap in Tiny MCE dropdowns. Fixes #757

--- a/core/Piranha.Manager/assets/src/scss/inc/_tinymce.scss
+++ b/core/Piranha.Manager/assets/src/scss/inc/_tinymce.scss
@@ -31,6 +31,12 @@
             margin-left: 4px;
         }
     }
+
+    .tox-collection__item-label {
+        >* {
+            white-space: nowrap;
+        }
+    }
 }
 
 .html-block, .html-column-block, .html-field {
